# MotaCoin

./: .gitattributes  .gitignore  COPYING  Makefile.am  MotaCoin-qt.pro  MotaCoin.conf  README.md  configure.ac  libbitcoinconsensus.pc.in
contrib/debian/: copyright
contrib/devtools/: symbol-check.py
contrib/gitian-descriptors/: deps-win32.yml  gitian-win32.yml  gitian.yml
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-clean  guix-codesign  guix-verify  manifest.scm
contrib/guix/libexec/: build.sh  codesign.sh  prelude.bash
contrib/guix/patches/: gcc-8-sort-libtool-find-output.patch
contrib/init/: MotaCoind.conf.template  MotaCoind.service.template
contrib/macdeploy/: README.md  detached-sig-apply.sh  detached-sig-create-hard.sh  detached-sig-create.sh  genzip.sh  macdeployqtplus
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  README  README_windows.txt  assets-attribution.md  assets-attribution.txt  build-msw.md  build-msw.txt  build-osx.txt  build-unix.txt  readme-qt.rst  release-process.txt
scripts/: Scripts' Readme.txt  compileMota.sh  installMotaDep.sh  minerInstall.sh
share/: setup.nsi.in
share/pixmaps/: bitcoin32.xpm  bitcoin80.xpm
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.qt.include  Makefile.qt_locale.include  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  base58.h  bignum.h  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  bloom.cpp  bloom.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  compat.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  irc.cpp  irc.h  kernel.cpp  kernel.h  key.cpp  key.h  keystore.cpp  keystore.h  limitedmap.h  main.cpp  main.h  makefile.bsd  (+43 more)
src/config/: bitcoin-config.h  bitcoin-config.h.in
src/leveldb/: build_detect_platform
src/qt/: aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  blockbrowser.cpp  blockbrowser.h  charitydialog.cpp  charitydialog.h  chatwindow.cpp  chatwindow.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  macdockiconhandler.mm  main.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  (+37 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  blockbrowser.ui  charitydialog.ui  chatwindow.ui  coincontroldialog.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  statisticspage.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  (+25 more)
src/qt/res/: bitcoin-qt.rc  motacoin-qt-res.rc
src/qt/res/icons/: motacoin.icns
src/qt/res/movies/: mining.mng
src/qt/res/themes/Black/: styles.qss
src/qt/res/themes/Blackwood/: styles.qss
src/qt/res/themes/Bluish-White/: styles.qss
src/qt/res/themes/Conflict/: styles.qss
src/qt/res/themes/Cyanotic/: styles.qss
src/qt/res/themes/Default/: styles.qss
src/qt/res/themes/Luminous/: styles.qss
src/qt/test/: uritests.h
src/types/: camount.h
